Resolved profile picture issue
Removed the extra white space between introduction and profile picture

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ name {
   }
   .intro_right{
     float: right;
-    width: 35%;
+    width: 40%;
     height: 310px;
   }
   .profile_img{
